--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@antv/g2": "^4.2.7",
     "umi": "^4.0.18"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "typescript": "^4.1.2",
     "@umijs/plugins": "^4.0.18",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^4.1.2"
   }
 }
