【装包】安装react-query

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@antv/g2": "^4.2.7",
     "ahooks": "^3.7.0",
+    "react-query": "^3.39.2",
     "umi": "^4.0.18"
   },
   "devDependencies": {
