--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "umi build",
     "postinstall": "umi setup",
     "setup": "umi setup",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "start:server": "cd ./server && yarn start"
   },
   "dependencies": {
     "@antv/g2": "^4.2.7",
